--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="video-player" class="video-player-hidden">
         <div class="video-container">
             <div class="video-wrapper">
-                <video id="video" crossorigin="anonymous"></video>
+                <video id="video" crossorigin="anonymous" playsinline webkit-playsinline controls></video>
                 <div class="custom-controls">
                     <div class="progress-bar">
                         <div class="progress"></div>
