--- a/index.html
+++ b/index.html
@@ -58,25 +58,7 @@
         <div class="video-container">
             <div class="video-wrapper">
                 <video id="video" crossorigin="anonymous" playsinline webkit-playsinline controls></video>
-                <div class="custom-controls">
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                    <div class="controls-bottom">
-                        <div class="left-controls">
-                            <button class="control-btn play-pause">▶</button>
-                            <button class="control-btn volume-btn">🔊</button>
-                            <span class="time">0:00 / 0:00</span>
-                        </div>
-                        <div class="center-controls">
-                            <button class="control-btn speed-btn">Rychlost (1x)</button>
-                            <button class="control-btn fullscreen-btn">⛶</button>
-                        </div>
-                        <div class="right-controls">
-                            <button class="control-btn close-player-btn">✕</button>
-                        </div>
-                    </div>
-                </div>
+                <button class="close-player-btn-simple">✕ Zavřít</button>
             </div>
         </div>
     </div>
