--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="video-player" class="video-player-hidden">
         <div class="video-container">
             <div class="video-wrapper">
-                <iframe id="video-iframe" allowfullscreen allow="autoplay"></iframe>
+                <video id="video" crossorigin="anonymous" playsinline webkit-playsinline controls autoplay></video>
                 <button class="close-player-btn-simple">✕ Zavřít</button>
             </div>
         </div>
