--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <div id="video-player" class="video-player-hidden">
         <div class="video-container">
             <div class="video-wrapper">
-                <iframe id="video-iframe" allowfullscreen allow="autoplay; fullscreen"></iframe>
+                <video id="video" controls playsinline webkit-playsinline style="max-width: 100%; max-height: 100%;">
+                    <source id="video-source" type="video/mp4">
+                </video>
                 <button class="close-player-btn-simple">✕ Zavřít</button>
             </div>
         </div>
